# go/docs/swagger.yaml
@@ -1,4 +1,11 @@
 definitions:
+  auth.EmailRequest:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
   auth.LoginRequest:
     properties:
       email:
@@ -73,6 +80,45 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Allow you to register as a new User
+      tags:
+      - Auth
+  /forgotten_password:
+    post:
+      consumes:
+      - application/json
+      description: Envoie un mail de reset de mot de passe
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/auth.EmailRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Connexion réussie
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Envoie un mail à un user existant afin de réinitialiser son mot de
+        passe
       tags:
       - Auth
   /login:
